--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,9 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg| %>
-      <%= msg %>
-    <% end %>
 
-    <%= yield %>
+<%= render 'layouts/messages' %>
+
+  <%= yield %>
   </body>
 </html>
