--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,25 @@
-<h1>This is my about page!</h1>
+<h1>Alpha Blog</h1>
+
+<h2>Hi! My name is Rafael Martins and this is my website/app to testing my Ruby on Rails skills.</h2>
+
+<p>It was built in sequence of "The Complete Ruby on Rails Developer Course" administrated by Mashur Hossain.</p>
+<p>It allows any user to:</p>
+
+<table>
+  <tr>
+    <p> - Create new Articles</p>
+  </tr>
+  <tr>
+    <p> - Editing/Update existing Articles, and</p>
+  </tr>
+  <tr>
+    <p> - Delete existing Articles</p>
+  </tr>
+</table>
+
+<p>If you want to create, update and delete articles, click on "Articles Listing" link.</p>
+<p>If you want to go back to the Home page, just click on "Home page".</p>
+
+<%= link_to 'Articles Listing', articles_path %>
+|
+<%= link_to 'Home page', root_path %>
